--- a/src/Pages/Items/Items.scss
+++ b/src/Pages/Items/Items.scss
@@ -586,3 +586,27 @@
   pointer-events: none;
   opacity: 0.7;
 }
+
+
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  text-align: center;
+  
+  .loading-spinner.large {
+    width: 40px;
+    height: 40px;
+    border-width: 3px;
+    margin-bottom: 15px;
+  }
+  
+  p {
+    color: #666;
+    font-size: 16px;
+    margin: 0;
+  }
+}
