--- a/src/Pages/Items/Items.scss
+++ b/src/Pages/Items/Items.scss
@@ -610,3 +610,24 @@
     margin: 0;
   }
 }
+
+
+.select-field {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  background-color: white;
+  
+  &:focus {
+    outline: none;
+    border-color: #7366ff;
+  }
+}
+
+.edit-input.select-field {
+  width: 100%;
+  padding: 8px;
+  font-size: 14px;
+}
